--- a/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Combo/Orbita.Controles.Combo.csproj
+++ b/CodigoFuente/x32/Orbita.Controles/Orbita.Controles.Combo/Orbita.Controles.Combo.csproj
@@ -37,20 +37,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Accessibility">
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
     <Reference Include="Infragistics2.Shared.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Proyectos\Orbita\Librerias\CodigoFuente\x32\Comun\Controles\Infragistics2.Shared.v11.2.dll</HintPath>
+      <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Shared.v11.2.dll</HintPath>
     </Reference>
     <Reference Include="Infragistics2.Win.UltraWinGrid.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Proyectos\Orbita\Librerias\CodigoFuente\x32\Comun\Controles\Infragistics2.Win.UltraWinGrid.v11.2.dll</HintPath>
+      <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Win.UltraWinGrid.v11.2.dll</HintPath>
     </Reference>
     <Reference Include="Infragistics2.Win.v11.2, Version=11.2.20112.2050, Culture=neutral, PublicKeyToken=7dd5c3163f2cd0cb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Proyectos\Orbita\Librerias\CodigoFuente\x32\Comun\Controles\Infragistics2.Win.v11.2.dll</HintPath>
+      <HintPath>..\..\Comun\Controles\Infragistics\V11-2\Infragistics2.Win.v11.2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -75,22 +72,21 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Orbita.Controles.Grid\Orbita.Controles.Grid.csproj">
-      <Project>{34B632DA-E0C4-4F27-AAFD-AFAD64604BFA}</Project>
-      <Name>Orbita.Controles.Grid</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Orbita.Controles.Shared\Orbita.Controles.Shared.csproj">
-      <Project>{66683373-9DC9-4104-B542-44D2DFBCC674}</Project>
-      <Name>Orbita.Controles.Shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="UC\OrbitaUltraCombo.resx">
       <DependentUpon>OrbitaUltraCombo.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Orbita.Controles.Grid\Orbita.Controles.Grid.csproj">
+      <Project>{34B632DA-E0C4-4F27-AAFD-AFAD64604BFA}</Project>
+      <Name>Orbita.Controles.Grid</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Orbita.Controles.Shared\Orbita.Controles.Shared.csproj">
+      <Project>{D104B7D1-93CB-46AE-8F84-AA68BB3B2C5E}</Project>
+      <Name>Orbita.Controles.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
