--- a/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
@@ -207,8 +207,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Config\Ejemplos\Remoting.config.xml" />
     <Content Include="Config\Ejemplos\Wrapper.config.xml" />
+    <Content Include="Config\Ejemplos\Remoting.config.xml" />
+    <Content Include="Config\Ejemplos\Wrapper.full.config.xml" />
     <Content Include="Config\Ejemplos\Debug.config.xml" />
   </ItemGroup>
   <ItemGroup>
