--- a/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Trazabilidad/Orbita.Trazabilidad.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1A2EEC44-A494-4BA6-A591-267B73A55CD1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Orbita.Trazabilidad</RootNamespace>
-    <AssemblyName>Orbita.Trazabilidad</AssemblyName>
+    <RootNamespace>OrbitaTrazabilidad</RootNamespace>
+    <AssemblyName>OrbitaTrazabilidad</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -45,7 +45,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Debug\Orbita.Trazabilidad.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\OrbitaTrazabilidad.xml</DocumentationFile>
     <RunCodeAnalysis>false</RunCodeAnalysis>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
     <PlatformTarget>x86</PlatformTarget>
@@ -58,7 +58,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\Release\Orbita.Trazabilidad.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\OrbitaTrazabilidad.xml</DocumentationFile>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
@@ -103,8 +103,8 @@
     <DebugSymbols>true</DebugSymbols>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;CODE_ANALYSIS;TRACE</DefineConstants>
-    <DocumentationFile>bin\Debug\Orbita.Trazabilidad.xml</DocumentationFile>
-    <Optimize>true</Optimize>
+    <DocumentationFile>bin\Debug\OrbitaTrazabilidad.xml</DocumentationFile>
+    <Optimize>false</Optimize>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <CodeAnalysisLogFile>bin\Debug\OrbitaTrazabilidad.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
@@ -116,6 +116,7 @@
     <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
@@ -140,8 +141,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config\ConfiguracionXmlLogger.cs" />
+    <Compile Include="Config\ConfiguracionLogger.cs" />
     <Compile Include="Core\DebugLogger.cs" />
     <Compile Include="Core\WrapperLogger.cs" />
     <Compile Include="Enumerados\Mascara.cs" />
@@ -153,6 +157,15 @@
     <Compile Include="Estructuras\Formato.cs" />
     <Compile Include="Estructuras\Logger.cs" />
     <Compile Include="Estructuras\Ruta.cs" />
+    <Compile Include="EventArgs\LoggerEventArgs.cs" />
+    <Compile Include="EventArgs\RemotingEventArgs.cs" />
+    <Compile Include="Factorias\FactoryLogger.cs" />
+    <Compile Include="Config\TargetAttribute.cs" />
+    <Compile Include="Factorias\PropertyHelper.cs" />
+    <Compile Include="Factorias\FactoryHelper.cs" />
+    <Compile Include="Diccionarios\TypeDictionary.cs" />
+    <Compile Include="Diccionarios\DictionaryLogger.cs" />
+    <Compile Include="Interfaces\ILogger.cs" />
     <Compile Include="Logger\FullPath.cs" />
     <Compile Include="Logger\PathBackup.cs" />
     <Compile Include="Logger\PathLogger.cs" />
@@ -161,7 +174,6 @@
     <Compile Include="Core\TrazaLogger.cs" />
     <Compile Include="Logger\BaseLogger.cs" />
     <Compile Include="Logger\BaseTraza.cs" />
-    <Compile Include="Interfaces\ILogger.cs" />
     <Compile Include="Logger\ItemLog.cs" />
     <Compile Include="Logger\ItemTraza.cs" />
     <Compile Include="Interfaces\ITraza.cs" />
@@ -171,6 +183,7 @@
     <Compile Include="Logger\TimerLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Remoting\IRemotingLogger.cs" />
+    <Compile Include="Repositorio\ExtensionUtiles.cs" />
     <Compile Include="Repositorio\SimpleLogger.cs" />
     <Compile Include="Repositorio\LogManager.cs" />
     <Compile Include="Repositorio\TrazaManager.cs" />
@@ -199,10 +212,10 @@
       <Name>Orbita.BBDD</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Config\Ejemplos\Debug.config.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)Orbita.Trazabilidad.dll" "$(ProjectDir)\..\..\Comun\Orbita" /R /Y /I</PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
