--- a/CodigoFuente/x32/Orbita/Orbita.Utiles/Orbita.Utiles.csproj
+++ b/CodigoFuente/x32/Orbita/Orbita.Utiles/Orbita.Utiles.csproj
@@ -122,6 +122,7 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisRuleSetDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
     <CodeAnalysisRuleDirectories>;c:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <DocumentationFile>bin\x86\Release\Orbita.Utiles.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="hasp_net_windows">
@@ -133,6 +134,7 @@
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Colecciones\OCola.cs" />
